# docs/api/openapi.yaml
@@ -196,7 +196,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/WebAuthnChallengeResponse"
+                $ref: "#/components/schemas/WebAuthnChallenge"
   /auth/webauthn/assertion-options:
     post:
       tags:
@@ -221,7 +221,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/WebAuthnChallengeResponse"
+                $ref: "#/components/schemas/WebAuthnChallenge"
   /auth/webauthn/assert:
     post:
       tags:
@@ -247,7 +247,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/TokenPairResponse"
+                $ref: "#/components/schemas/TokenPair"
   /auth/refresh:
     post:
       tags:
@@ -273,7 +273,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/TokenPairResponse"
+                $ref: "#/components/schemas/TokenPair"
   /auth/logout:
     post:
       tags:
@@ -321,7 +321,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/LoginResponse"
+                $ref: "#/components/schemas/LoginResult"
   /quotes/{id}/coverage:
     patch:
       tags:
@@ -587,7 +587,7 @@ components:
       required:
       - challengeId
       - credentialJson
-    WebAuthnChallengeResponse:
+    WebAuthnChallenge:
       type: object
       properties:
         challengeId:
@@ -613,7 +613,7 @@ components:
       required:
       - challengeId
       - credentialJson
-    TokenPairResponse:
+    TokenPair:
       type: object
       properties:
         accessToken:
@@ -643,7 +643,7 @@ components:
       required:
       - password
       - username
-    LoginResponse:
+    LoginResult:
       type: object
       properties:
         status:
@@ -651,7 +651,7 @@ components:
         mfaToken:
           type: string
         tokens:
-          $ref: "#/components/schemas/TokenPairResponse"
+          $ref: "#/components/schemas/TokenPair"
     UpdateCoverageRequest:
       type: object
       properties:
